# obbidl

./: .gitignore  LICENSE  README.md
example/: Cargo.toml  test.txt
example-rs/: Cargo.toml  build.rs  output.rs  test.txt
example-rs/src/: main.rs  test_proc.obbidl
example/src/: main.rs
obbidl-cli/: Cargo.toml
obbidl-cli/examples/: simple.obbidl
obbidl-cli/src/: main.rs
obbidl-cli/templates/: rust.jinja
obbidl-derive/: Cargo.toml
obbidl-derive/src/: lib.rs
obbidl-lib/: Cargo.toml
obbidl-lib/src/: ast.rs  generate.rs  lib.rs  parser.rs  report.rs  state_machine.rs  token.rs  validate.rs
obbidl-lib/src/format/: binary.rs  mod.rs
obbidl-rs/: Cargo.toml  example.txt  output.dot
obbidl-rs/src/: ast.rs  channel.rs  compile.rs  fsm.rs  generate.rs  graph.rs  lexer.rs  lib.rs  main.rs  parse.rs  parser.rs  state_machine.rs  test.rs  to_fsm.rs  token.rs  validate.rs
obbidl-rs/src/format/: json.rs
obbidl-rs/templates/: rust.j2  rust.jinja
obbidl-wasm/: Cargo.toml  index.html  notes.md
obbidl-wasm/src/: lib.rs
spec/: spec.obbidl
